fix double borders

--- a/src/_scss/pages/aboutTheData/_agenciesPage.scss
+++ b/src/_scss/pages/aboutTheData/_agenciesPage.scss
@@ -19,12 +19,24 @@
     // Styles specific to the "Statistics by Reporting Period" tab
 
     // this was added after the dtui table styles were changed for the new search page
+    td.usda-table__cell.usda-table__cell_right {
+        border: 0;
+        border-top: solid 1px $color-gray-border;
+        border-right: solid 1px $color-gray-border;
+    }
     th, td {
         // we need to get rid of the black borders that will appear
         border: 0;
+    }
+
+    td {
         // and replace them with this gray border
-        // it now appears to be 2px rather than 1, but this is how it has always been
-        border: solid 1px $color-gray-border;
+        border-top: solid 1px $color-gray-border;
+        border-right: solid 1px $color-gray-border;
+    }
+
+    th {
+        border-right: solid 1px $color-gray-border;
     }
 
     thead {
